--- a/hypr/windowrule.conf
+++ b/hypr/windowrule.conf
@@ -1,13 +1,11 @@
 # █░█░█ █ █▄░█ █▀▄ █▀█ █░█░█   █▀█ █░█ █░░ █▀▀ █▀
 # ▀▄▀▄▀ █ █░▀█ █▄▀ █▄█ ▀▄▀▄▀   █▀▄ █▄█ █▄▄ ██▄ ▄█
 
-# Opacity 
-windowrulev2 = opacity 0.90 0.90,class:^(Brave-browser)$
-windowrulev2 = opacity 0.80 0.80,class:^(Steam)$
-windowrulev2 = opacity 0.80 0.80,class:^(steam)$
+# Opacity limited to electron apps
+windowrulev2 = opacity 0.80 0.80,class:^(firefox)$
 windowrulev2 = opacity 0.80 0.80,class:^(steamwebhelper)$
 windowrulev2 = opacity 0.80 0.80,class:^(Spotify)$
-windowrulev2 = opacity 0.80 0.80,class:^(Code)$
+windowrulev2 = opacity 0.80 0.80,class:^(rofi)$
 windowrulev2 = opacity 0.80 0.80,class:^(thunar)$
 windowrulev2 = opacity 0.80 0.80,class:^(file-roller)$
 windowrulev2 = opacity 0.80 0.80,class:^(nwg-look)$
@@ -41,10 +39,8 @@ windowrulev2 = float,title:^(File Operation Progress)
 windowrulev2 = move 75 44%,title:^(Volume Control)$
 
 # Workspace 
-windowrulev2 = workspace 1, class:^(Brave-browser)$
-windowrulev2 = workspace 2, class:^(discord)$
 windowrulev2 = workspace 3, class:^(org.telegram.desktop)$
-windowrulev2 = workspace 4, class:^(Code)$
+windowrulev2 = workspace 3, class:^(code)$
 windowrulev2 = workspace 4, class:^(code-url-handler)$
 windowrulev2 = workspace 5, class:^(Spotify)$
 
