--- a/hypr/keybinds.conf
+++ b/hypr/keybinds.conf
@@ -1,18 +1,32 @@
 # █▄▀ █▀▀ █▄█ █▄▄ █ █▄░█ █▀▄
 # █░█ ██▄ ░█░ █▄█ █ █░▀█ █▄▀
 
-
 $scriptsDir = $HOME/.config/hypr/scripts
 $notifycmd = notify-send -h string:x-canonical-private-synchronous:hypr-cfg -u low
 $bg-dir = $HOME/.wallpapers
 
-# IDK
+
+# █▀▀  █░█  █▀  ▀█▀  █▀█  █▀▄▀█
+# █▄▄  █▄█  ▄█  ░█░  █▄█  █░▀░█
+
 $term = wezterm
 $volume = $scriptsDir/volume
 $screenshot = $scriptsDir/screensht
 $colorpicker = $scriptsDir/colorpicker
 $files = thunar
 $browser = brave
+bind = SUPER, t, exec, kitty
+bind = SUPER, f, exec, firefox
+
+
+# █▀▄▀█  █░█  █░░  ▀█▀  █  █▀▄▀█  █▀▀  █▀▄  █ ▄▀█
+# █░▀░█  █▄█  █▄▄  ░█░  █  █░▀░█  ██▄  █▄▀  █ █▀█
+
+bind = , XF86AudioPlay, exec, playerctl play-pause
+bind = , XF86AudioStop, exec, playerctl stop
+bind = , XF86AudioNext, exec, playerctl next
+bind = , XF86AudioPrev, exec, playerctl previous
+
 
 # █▀ █▀▀ █▀█ █▀▀ █▀▀ █▄░█ █▀ █░█ █▀█ ▀█▀
 # ▄█ █▄▄ █▀▄ ██▄ ██▄ █░▀█ ▄█ █▀█ █▄█ ░█░
@@ -22,8 +36,10 @@ bind = SUPER SHIFT, v, exec, killall -s SIGINT wf-recorder
 bind = , Print, exec, $screenshot full
 bind = SUPERSHIFT, S, exec, $screenshot  area
 
+
 # █▀▄▀█ █ █▀ █▀▀
 # █░▀░█ █ ▄█ █▄▄
+
 bind = SUPER SHIFT, X, exec, $colorpicker
 bind = CTRL ALT, L, exec, swaylock
 bind = SUPER, Return, exec, $term
@@ -32,15 +48,20 @@ bind = SUPER, D, exec, killall rofi || rofi -show drun -theme ~/.config/rofi/con
 bind = SUPER, period, exec, killall rofi || rofi -show emoji -emoji-format "{emoji}" -modi emoji -theme ~/.config/rofi/global/emoji
 bind = SUPER SHIFT, B, exec, killall -SIGUSR2 waybar # Reload waybar
 bind = SUPER, B, exec, killall -SIGUSR1 waybar # Hide waybar
+bind = , XF86MonBrightnessUp, exec, light -A 10
+bind = , XF86MonBrightnessDown, exec, light -U 10
+
 
 # █░█░█ █ █▄░█ █▀▄ █▀█ █░█░█   █▀▄▀█ ▄▀█ █▄░█ ▄▀█ █▀▀ █▀▄▀█ █▀▀ █▄░█ ▀█▀
 # ▀▄▀▄▀ █ █░▀█ █▄▀ █▄█ ▀▄▀▄▀   █░▀░█ █▀█ █░▀█ █▀█ █▄█ █░▀░█ ██▄ █░▀█ ░█░
+
 bind = SUPER, Q, killactive,
 bind = SUPER SHIFT, Q, exit,
-bind = SUPER, F, fullscreen,
+bind = SUPER SHIFT, F, fullscreen,
 bind = SUPER, Space, togglefloating,
 bind = SUPER, P, pseudo, # dwindle
 bind = SUPER, S, togglesplit, # dwindle
+
 
 # Change Workspace Mode
 bind = SUPER SHIFT, Space, workspaceopt, allfloat
@@ -51,12 +72,14 @@ bind = SUPER SHIFT, P, exec, $notifycmd 'Toggled All Pseudo Mode'
 bind = SUPER, Tab, cyclenext,
 bind = SUPER, Tab, bringactivetotop,
 
+
 # █▀▀ █▀█ █▀▀ █░█ █▀
 # █▀░ █▄█ █▄▄ █▄█ ▄█
 bind = SUPER, h, movefocus, l
 bind = SUPER, l, movefocus, r
 bind = SUPER, k, movefocus, u
 bind = SUPER, j, movefocus, d
+
 
 # █▀▄▀█ █▀█ █░█ █▀▀
 # █░▀░█ █▄█ ▀▄▀ ██▄
@@ -65,6 +88,7 @@ bind = SUPER SHIFT, right, movewindow, r
 bind = SUPER SHIFT, up, movewindow, u
 bind = SUPER SHIFT, down, movewindow, d
 
+
 # █▀█ █▀▀ █▀ █ ▀█ █▀▀
 # █▀▄ ██▄ ▄█ █ █▄ ██▄
 bind = SUPER CTRL, left, resizeactive, -20 0
@@ -72,11 +96,13 @@ bind = SUPER CTRL, right, resizeactive, 20 0
 bind = SUPER CTRL, up, resizeactive, 0 -20
 bind = SUPER CTRL, down, resizeactive, 0 20
 
+
 # ▀█▀ ▄▀█ █▄▄ █▄▄ █▀▀ █▀▄
 # ░█░ █▀█ █▄█ █▄█ ██▄ █▄▀
 bind = SUPER, g, togglegroup
 bind = SUPER, tab, changegroupactive
 bind = SUPER, G, exec, $notifycmd 'Toggled Group Mode'
+
 
 # █▀ █▀█ █▀▀ █▀▀ █ ▄▀█ █░░
 # ▄█ █▀▀ ██▄ █▄▄ █ █▀█ █▄▄
@@ -84,6 +110,7 @@ bind = SUPER, a, togglespecialworkspace
 bind = SUPERSHIFT, a, movetoworkspace, special
 bind = SUPER, a, exec, $notifycmd 'Toggled Special Workspace'
 bind = SUPER, c, exec, hyprctl dispatch centerwindow
+
 
 # █▀ █░█░█ █ ▀█▀ █▀▀ █░█
 # ▄█ ▀▄▀▄▀ █ ░█░ █▄▄ █▀█
@@ -100,8 +127,10 @@ bind = SUPER, 0, workspace, 10
 bind = SUPER ALT, up, workspace, e+1
 bind = SUPER ALT, down, workspace, e-1
 
+
 # █▀▄▀█ █▀█ █░█ █▀▀
 # █░▀░█ █▄█ ▀▄▀ ██▄
+
 bind = SUPER SHIFT, 1, movetoworkspace, 1
 bind = SUPER SHIFT, 2, movetoworkspace, 2
 bind = SUPER SHIFT, 3, movetoworkspace, 3
@@ -113,9 +142,18 @@ bind = SUPER SHIFT, 8, movetoworkspace, 8
 bind = SUPER SHIFT, 9, movetoworkspace, 9
 bind = SUPER SHIFT, 0, movetoworkspace, 10
 
+
 # █▀▄▀█ █▀█ █░█ █▀ █▀▀   █▄▄ █ █▄░█ █▀▄ █ █▄░█ █▀▀
 # █░▀░█ █▄█ █▄█ ▄█ ██▄   █▄█ █ █░▀█ █▄▀ █ █░▀█ █▄█
+
 bindm = SUPER, mouse:272, movewindow
 bindm = SUPER, mouse:273, resizewindow
 bind = SUPER, mouse_down, workspace, e+1
 bind = SUPER, mouse_up, workspace, e-1
+
+
+# █░█  █▀█  █░░  █░█  █▀▄▀█  █▀▀   █▄▄ █ █▄░█ █▀▄ █ █▄░█ █▀▀
+# ▀▄▀  █▄█  █▄▄  █▄█  █░▀░█  ██▄   █▄█ █ █░▀█ █▄▀ █ █░▀█ █▄█
+bind = , XF86AudioLowerVolume, exec, pamixer -d 5
+bind = , XF86AudioRaiseVolume, exec, pamixer -i 5
+bind = , XF86AudioMute, exec, pamixer -t
