hypr config update

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -8,14 +8,12 @@ source = ~/.config/hypr/keybinds.conf
 
 
 
-
-
 # █▀▄▀█ █▀█ █▄░█ █ ▀█▀ █▀█ █▀█
 # █░▀░█ █▄█ █░▀█ █ ░█░ █▄█ █▀▄
 
 #monitor = DP-1,1920x1080,0x0,1
 monitor = desc:Chimei Innolux Corporation 0x151E,highres,auto,1 
-monitor = desc:LG Electronics E1941 201INEW0U108,preferred,auto,1
+monitor = desc:LG Electronics LG FHD 401TOZU3B917,highres,auto,1
 
 
 
@@ -42,9 +40,9 @@ input {
 # █▄█ ██▄ █░▀█ ██▄ █▀▄ █▀█ █▄▄
 
 general {
-  gaps_in = 5
-  gaps_out = 5
-  border_size = 2
+  gaps_in = 1
+  gaps_out = 2
+  border_size = 0
   col.active_border = rgba(6c579eff) rgba(62579eff) 45deg
   col.inactive_border = 0xff382D2E
   no_border_on_floating = false # enable border on float window
