--- a/hypr/keybinds.conf
+++ b/hypr/keybinds.conf
@@ -13,10 +13,11 @@ $term = wezterm
 $volume = $scriptsDir/volume
 $screenshot = $scriptsDir/screensht
 $colorpicker = $scriptsDir/colorpicker
-$files = thunar
+$files = pcmanfm
 $browser = brave
 bind = SUPER, t, exec, kitty
 bind = SUPER, f, exec, firefox
+bind = CTRL ALT, DELETE, exec, wlogout
 
 
 # █▀▄▀█  █░█  █░░  ▀█▀  █  █▀▄▀█  █▀▀  █▀▄  █ ▄▀█
@@ -61,6 +62,8 @@ bind = SUPER SHIFT, F, fullscreen,
 bind = SUPER, Space, togglefloating,
 bind = SUPER, P, pseudo, # dwindle
 bind = SUPER, S, togglesplit, # dwindle
+bind = SUPER SHIFT, K, fakefullscreen,
+
 
 
 # Change Workspace Mode
