--- a/hypr/startup.conf
+++ b/hypr/startup.conf
@@ -5,7 +5,7 @@ exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CUR
 exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP # for XDPH
 exec-once = /usr/lib/polkit-kde-authentication-agent-1 # authentication dialogue for GUI apps
 exec-once = echo latam > /tmp/kb_layout
-exec-once = wlsunset -t 5200 -S 9:00 -s 19:30 # NightLight from 7.30pm to 9am
+#exec-once = wlsunset -t 5200 -S 9:00 -s 19:30 # NightLight from 7.30pm to 9am
 exec-once = systemctl --user restart pipewire # Restart pipewire to avoid bugs
 exec-once = waybar # launch the system panel
 exec-once = dunst # start notification demon
