--- a/hypr/windowrule.conf
+++ b/hypr/windowrule.conf
@@ -3,15 +3,15 @@
 
 # Opacity limited to electron apps
 windowrulev2 = opacity 0.80 0.80,class:^(firefox)$
+windowrulev2 = opacity 0.70 0.70,class:^(kitty)$
 windowrulev2 = opacity 0.80 0.80,class:^(steamwebhelper)$
 windowrulev2 = opacity 0.80 0.80,class:^(Spotify)$
-windowrulev2 = opacity 0.80 0.80,class:^(rofi)$
 windowrulev2 = opacity 0.80 0.80,class:^(thunar)$
 windowrulev2 = opacity 0.80 0.80,class:^(file-roller)$
 windowrulev2 = opacity 0.80 0.80,class:^(nwg-look)$
 windowrulev2 = opacity 0.80 0.80,class:^(qt5ct)$
 windowrulev2 = opacity 0.80 0.80,class:^(discord)$ #Discord-Electron
-windowrulev2 = opacity 0.80 0.80,class:^(WebCord)$ #WebCord-Electron
+windowrulev2 = opacity 0.80 0.80,class:^(vscode)$ #WebCord-Electron
 windowrulev2 = opacity 0.80 0.70,class:^(pavucontrol)$
 windowrulev2 = opacity 0.80 0.70,class:^(org.kde.polkit-kde-authentication-agent-1)$
 windowrulev2 = opacity 0.80 0.80,class:^(org.telegram.desktop)$
@@ -40,9 +40,7 @@ windowrulev2 = move 75 44%,title:^(Volume Control)$
 
 # Workspace 
 windowrulev2 = workspace 3, class:^(org.telegram.desktop)$
-windowrulev2 = workspace 3, class:^(code)$
 windowrulev2 = workspace 4, class:^(code-url-handler)$
-windowrulev2 = workspace 5, class:^(Spotify)$
 
 # Size
 windowrulev2 = size 800 600,class:^(download)$
