--- a/waybar/config.jsonc
+++ b/waybar/config.jsonc
@@ -1,13 +1,15 @@
 {
+  "output": "eDP-1",
   "position": "top",
   "layer": "top",
-  "margin-top": 5,
+  "margin-top": 2,
   "margin-bottom": 0,
-  "margin-left": 5,
-  "margin-right": 5,
+  "margin-left": 2,
+  "margin-right": 2,
   "modules-left": [
     "custom/launcher",
     "hyprland/workspaces",
+    "cava",
     "custom/playerctl",
     "custom/playerlabel"
   ],
@@ -176,5 +178,26 @@
     "format": "󰈋",
     "on-click": "hyprpicker -a -f hex",
     "on-click-right": "hyprpicker -a -f rgb"
-  }
+  },
+  "cava": {
+            "framerate": 30,
+            "autosens": 1,
+            "sensitivity": 100,
+            "bars": 14,
+            "lower_cutoff_freq": 50,
+            "higher_cutoff_freq": 10000,
+            "method": "pulse",
+            "source": "auto",
+            "stereo": true,
+            "reverse": false,
+            "bar_delimiter": 0,
+            "monstercat": false,
+            "waves": false,
+            "noise_reduction": 0.77,
+            "input_delay": 2,
+            "format-icons" : ["▁", "▂", "▃", "▄", "▅", "▆", "▇", "█" ],
+            "actions": {
+                       "on-click-right": "mode"
+                       }
+        }
 }
